--- a/architecture/index.html
+++ b/architecture/index.html
@@ -198,7 +198,7 @@
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-2">
       <div class="Grid-cell">
-        <a href="./recreation_commons/">
+        <a class="no-hover-effect" href="./recreation_commons/">
           <div class="element">
             <div class="elementCard float cardBorder shadowBoxLt">
               <img src="./all_sizes_recreation_commons.svg" alt="Appointa">
@@ -254,7 +254,7 @@
 
 
       <div class="Grid-cell">
-        <a href="./narrow_stripes/">
+        <a class="no-hover-effect" href="./narrow_stripes/">
           <div class="element">
             <div class="elementCard float cardBorder shadowBoxLt">
               <img src="./ar_02.jpg" alt="Appointa">
@@ -278,7 +278,7 @@
         </a>
       </div>
       <div class="Grid-cell">
-        <a href="./recovery_of_river_edges/">
+        <a class="no-hover-effect" href="./recovery_of_river_edges/">
           <div class="element">
             <div class="elementCard float cardBorder shadowBoxLt">
               <img src="./ar_03.jpg" alt="Appointa">
@@ -310,7 +310,7 @@
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-2">
       <div class="Grid-cell">
-        <a href="./thesis_studio/">
+        <a class="no-hover-effect" href="./thesis_studio/">
           <div class="element">
             <div class="elementCard float cardBorder shadowBoxLt">
               <img src="./ar_07.jpg" alt="Appointa">
@@ -332,7 +332,7 @@
         </a>
       </div>
       <div class="Grid-cell">
-        <a href="./the_rotation_of_curves/">
+        <a class="no-hover-effect" href="./the_rotation_of_curves/">
           <div class="element">
             <div class="elementCard float cardBorder shadowBoxLt">
               <img src="./ar_05.jpg" alt="Appointa">
@@ -363,7 +363,7 @@
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-2">
       <div class="Grid-cell">
-        <a href="./manifold_ground/">
+        <a class="no-hover-effect" href="./manifold_ground/">
           <div class="element">
             <div class="elementCard float cardBorder shadowBoxLt">
               <img src="./ar_04.jpg" alt="Appointa">
@@ -384,7 +384,7 @@
         </a>
       </div>
       <div class="Grid-cell">
-        <a href="./LACAMA/">
+        <a class="no-hover-effect" href="./LACAMA/">
           <div class="element">
             <div class="elementCard float cardBorder shadowBoxLt">
               <img src="./ar_08.jpg" alt="Appointa">
