--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <!-- Basic Metadata -->
   <link rel="canonical" href="https://vickywang.me/">
-  <title>Innovative UX Strategist Specializing in B2B SaaS & Mobile Workflow Efficiency - Vicky Wang </title>
+  <title>Innovative UX Designer Specializing in B2B SaaS & Mobile Workflow Efficiency - Vicky Wang </title>
   <meta name="title" content="Skilled UX Designer for B2B Solutions & Consumer Apps - Vicky Wang">
   <meta name="author" content="Vicky W.">
   <meta name="description"
@@ -16,7 +16,7 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Innovative UX Strategist Specializing in B2B SaaS & Mobile Workflow Efficiency - Vicky Wang">
+  <meta property="og:title" content="Innovative UX Designer Specializing in B2B SaaS & Mobile Workflow Efficiency - Vicky Wang">
   <meta property="og:description"
     content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
   <meta property="og:url" content="https://vickywang.me/">
@@ -26,7 +26,7 @@
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://vickywang.me/">
-  <meta property="twitter:title" content="Innovative UX Strategist Specializing in B2B SaaS & Mobile Workflow Efficiency - Vicky Wang">
+  <meta property="twitter:title" content="Innovative UX Designer Specializing in B2B SaaS & Mobile Workflow Efficiency - Vicky Wang">
   <meta property="twitter:description"
     content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
   <meta property="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
