card floating issue fixed

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Innovative UX Designer Specializing in B2B SaaS & Mobile Workflow Efficiency - Vicky Wang">
+  <meta property="og:title"
+    content="Innovative UX Designer Specializing in B2B SaaS & Mobile Workflow Efficiency - Vicky Wang">
   <meta property="og:description"
     content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
   <meta property="og:url" content="https://vickywang.me/">
@@ -26,7 +27,8 @@
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://vickywang.me/">
-  <meta property="twitter:title" content="Innovative UX Designer Specializing in B2B SaaS & Mobile Workflow Efficiency - Vicky Wang">
+  <meta property="twitter:title"
+    content="Innovative UX Designer Specializing in B2B SaaS & Mobile Workflow Efficiency - Vicky Wang">
   <meta property="twitter:description"
     content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
   <meta property="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
@@ -86,9 +88,6 @@
   <link rel="stylesheet" href="./main.css">
   <script type="text/javascript" src="scripts.js"></script>
   <script type="text/javascript" src="scripts_project.js"></script>
-
-
-
 </head>
 
 <body>
@@ -103,8 +102,6 @@
   <header>
     <nav class="header" id="header">
       <div class="backgroundColorNav">
-
-
         <a href="http://vickywang.me/"><img class="logo pointer" src="./icon/LOGO.svg" alt="VW"
             title="vickywang.me"></a>
         <div class="navbar">
@@ -174,7 +171,9 @@
         </div>
         <div class="Grid Grid--full forFullResponsiveGrid">
           <div class="Grid-cell">
-            <h3>I am based in San Francisco and am deeply committed to developing web solutions for both businesses and consumers. My approach hinges on dissecting complex challenges and transforming them into clear, efficient, and impactful digital experiences. </h3>
+            <h3>I am based in San Francisco and am deeply committed to developing web solutions for both businesses and
+              consumers. My approach hinges on dissecting complex challenges and transforming them into clear,
+              efficient, and impactful digital experiences. </h3>
           </div>
         </div>
       </div>
@@ -271,12 +270,13 @@
     <!-- projects -->
 
     <div class="wrapper">
+
       <div class="Grid Grid--gutters Grid--cols-2">
         <div class="Grid-cell">
           <div class="element">
             <a class="no-hover-effect" href="/glorify/">
               <div class="elementCard GLORIFY float cardBorder shadowBoxLt">
-                <img src="./ProjectImages/Cover_Glorify.png" alt="GLORIFY">
+                <img src="./projectImages/Cover_Glorify.png" alt="GLORIFY">
                 <div class="element">
                   <div class="element">
                     <h5>For daily worship</h5>
@@ -293,7 +293,7 @@
             <a class="no-hover-effect">
               <div class="elementCard LASO float cardBorder shadowBoxLt">
                 <div class="img__wrap">
-                  <img class="img__img" alt="Work Samples" src="./ProjectImages/Cover_worksample.png" />
+                  <img class="img__img" alt="Work Samples" src="./projectImages/Cover_worksample.png" />
                   <div class="img__description">
                     <div class="input-field">
                       <div class="column">
@@ -331,7 +331,7 @@
             <a class="no-hover-effect" href="/appointa/">
               <div class="">
                 <div class="elementCard float cardBorder APPOINTA shadowBoxLt">
-                  <img src="./ProjectImages/Cover_APPOINTA.png" alt="APPOINTA">
+                  <img src="./projectImages/Cover_APPOINTA.png" alt="APPOINTA">
                   <div class="element">
                     <div class="element">
                       <h5>For job interview scheduling</h5>
@@ -349,7 +349,7 @@
           <div class="element">
             <a class="no-hover-effect" href="/seer/">
               <div class="elementCard float cardBorder SEER shadowBoxLt">
-                <img src="./ProjectImages/Cover_SEER.png" alt="SEER">
+                <img src="./projectImages/Cover_SEER.png" alt="SEER">
                 <div class="element">
                   <div class="element">
                     <h5>For tracking business performance</h5>
@@ -390,7 +390,7 @@
             <a class="no-hover-effect" href="/design_system/">
               <div class="">
                 <div class="elementCard float cardBorder shadowBoxLt">
-                  <img src="./ProjectImages/Cover_portfolioWeb.svg" alt="vickywang.me">
+                  <img src="./projectImages/vicky_website.svg" alt="vickywang.me">
                   <div class="element">
                     <div class="element">
                       <h5>For website vickywang.me </h5>
@@ -410,7 +410,7 @@
             <a class="no-hover-effect" href="/navigation/">
               <div class="">
                 <div class="elementCard float cardBorder shadowBoxLt">
-                  <img src="./ProjectImages/Cover_portfolioWeb.svg" alt="vickywang.me">
+                  <img src="./projectImages/vicky_website.svg" alt="vickywang.me">
                   <div class="element">
                     <div class="element">
                       <h5>For website case study &#64; vickywang.me </h5>
