--- a/design_system/index.html
+++ b/design_system/index.html
@@ -1458,7 +1458,7 @@
 
 
 
-          <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+          <div class="Grid Grid--full  Grid--cols-1 forFullResponsiveGrid u-textCenter">
             <div class="Grid-cell">
               <div class="Demo">
                 <div class="elementInnerDemo content-1of1"></div>
