tabs + copy code to clipboard

--- a/design_system/index.html
+++ b/design_system/index.html
@@ -134,7 +134,7 @@
               </a>
               <a href="/navigation/">
                 <div>
-                  <img src="../ProjectImages/Cover_portfolioWeb.svg" alt="Design System">
+                  <img src="../projectImages/vicky_website.svg" alt="Design System">
                   <div class="element">
                     <h5 class="colorBlack">Navigation Design | Secondary Menu Options for vickywang.me</h5>
                   </div>
@@ -291,7 +291,7 @@
             <input type="radio" class="select-html" name="code-type-1" id="select-html-1">
             <label for="select-html-1" class="tab">HTML</label>
           </div>
-          <button class="copy-btn" style="display:inline;">Copy</button>
+          <button class="copy-btn" style="display:inline;">Copy Code</button>
         </div>
     
         <div class="ejs-block code-block">
