--- a/index.html
+++ b/index.html
@@ -270,18 +270,37 @@
     <!-- projects -->
 
     <div class="wrapper">
-
       <div class="Grid Grid--gutters Grid--cols-2">
         <div class="Grid-cell">
           <div class="element">
-            <a class="no-hover-effect" href="/glorify/">
-              <div class="elementCard GLORIFY float cardBorder shadowBoxLt">
-                <img src="./projectImages/Cover_Glorify.png" alt="GLORIFY">
-                <div class="element">
+            <a class="no-hover-effect">
+              <div class="elementCard LASO float cardBorder shadowBoxLt">
+                <div class="img__wrap">
+                  <img class="img__img" alt="Work Samples" src="./projectImages/Cover_worksample.png" />
+                  <div class="img__description">
+                    <div class="input-field">
+                      <div class="column">
+                        <label for="password">
+                          <h5>Password</h5>
+                        </label>
+                        <input class="PWinputLanding" type="password" id="adminPanel" placeholder="Enter password">
+
+                        <div class="pwIncorrectHeight">
+                          <span id="pwIncorrect">Password is incorrect </span>
+                        </div>
+                      </div>
+                      <button class="passwordArr" type="submit">
+                        <img src="./icon/arrow-forward.svg" alt="Enter">
+                        <!--  <i class="fas fa-chevron-right"></i> -->
+                      </button>
+                    </div>
+                  </div>
                   <div class="element">
-                    <h5>For daily worship</h5>
-                    <h3 class="arrCard" data-aos="fade-up"><strong>GLORIFY</strong></h3>
-                    <h4>Integrating a community experience into the existing Glorify Application</h4>
+                    <div class="element">
+                      <h5>Password is required </h5>
+                      <h3 class="arrCard" data-aos="fade-up"><strong>WORK SAMPLE 1 - admin panel</strong></h3>
+                      <h4>Extensive startup experience with full design process immersion and diverse skill set</h4>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -300,7 +319,7 @@
                         <label for="password">
                           <h5>Password</h5>
                         </label>
-                        <input class="PWinputLanding" type="password" id="password" placeholder="Enter password">
+                        <input class="PWinputLanding" type="password" id="rxZero" placeholder="Enter password">
 
                         <div class="pwIncorrectHeight">
                           <span id="pwIncorrect">Password is incorrect </span>
@@ -315,7 +334,7 @@
                   <div class="element">
                     <div class="element">
                       <h5>Password is required </h5>
-                      <h3 class="arrCard" data-aos="fade-up"><strong>WORK SAMPLES</strong></h3>
+                      <h3 class="arrCard" data-aos="fade-up"><strong>WORK SAMPLES RX Zero</strong></h3>
                       <h4>Extensive startup experience with full design process immersion and diverse skill set</h4>
                     </div>
                   </div>
@@ -324,6 +343,98 @@
             </a>
           </div>
         </div>
+      </div>
+
+      <div class="Grid Grid--gutters Grid--cols-2">
+
+        <div class="Grid-cell">
+          <div class="element">
+            <a class="no-hover-effect">
+              <div class="elementCard LASO float cardBorder shadowBoxLt">
+                <div class="img__wrap">
+                  <img class="img__img" alt="Work Samples" src="./projectImages/Cover_worksample.png" />
+                  <div class="img__description">
+                    <div class="input-field">
+                      <div class="column">
+                        <label for="password">
+                          <h5>Password</h5>
+                        </label>
+                        <input class="PWinputLanding" type="password" id="productPage" placeholder="Enter password">
+
+                        <div class="pwIncorrectHeight">
+                          <span id="pwIncorrect">Password is incorrect </span>
+                        </div>
+                      </div>
+                      <button class="passwordArr" type="submit">
+                        <img src="./icon/arrow-forward.svg" alt="Enter">
+                        <!--  <i class="fas fa-chevron-right"></i> -->
+                      </button>
+                    </div>
+                  </div>
+                  <div class="element">
+                    <div class="element">
+                      <h5>Password is required </h5>
+                      <h3 class="arrCard" data-aos="fade-up"><strong>WORK SAMPLES 2 product page</strong></h3>
+                      <h4>Extensive startup experience with full design process immersion and diverse skill set</h4>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="Grid-cell">
+          <div class="element">
+            <a class="no-hover-effect" href="/glorify/">
+              <div class="elementCard GLORIFY float cardBorder shadowBoxLt">
+                <img src="./projectImages/Cover_Glorify.png" alt="GLORIFY">
+                <div class="element">
+                  <div class="element">
+                    <h5>For daily worship</h5>
+                    <h3 class="arrCard" data-aos="fade-up"><strong>GLORIFY</strong></h3>
+                    <h4>Integrating a community experience into the existing Glorify Application</h4>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+
+      </div>
+      <div class="Grid Grid--gutters Grid--cols-2">
+        <div class="Grid-cell">
+          <div class="element">
+            <a class="no-hover-effect" href="/glorify/">
+              <div class="elementCard GLORIFY float cardBorder shadowBoxLt">
+                <img src="./projectImages/Cover_worksample.png" alt="GLORIFY">
+                <div class="element">
+                  <div class="element">
+                    <h5>For daily worship</h5>
+                    <h3 class="arrCard" data-aos="fade-up"><strong>BYP B2B SaaS - Onboarding, booking</strong></h3>
+                    <h4>Integrating a community experience into the existing Glorify Application</h4>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="Grid-cell">
+          <div class="element">
+            <a class="no-hover-effect" href="/glorify/">
+              <div class="elementCard GLORIFY float cardBorder shadowBoxLt">
+                <img src="./projectImages/Cover_worksample.png" alt="GLORIFY">
+                <div class="element">
+                  <div class="element">
+                    <h5>For daily worship</h5>
+                    <h3 class="arrCard" data-aos="fade-up"><strong>BYP Cusumer flow</strong></h3>
+                    <h4>Integrating a community experience into the existing Glorify Application</h4>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+
       </div>
       <div class="Grid Grid--gutters Grid--cols-2">
         <div class="Grid-cell">
