password filed update

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                   <div class="element">
                     <div class="element">
                       <h5>Password is required </h5>
-                      <h3 class="arrCard" data-aos="fade-up"><strong>WORK SAMPLE 1 - admin panel</strong></h3>
+                      <h3 class="arrCard" data-aos="fade-up"><strong>Admin Panel 0 - 1</strong></h3>
                       <h4>Extensive startup experience with full design process immersion and diverse skill set</h4>
                     </div>
                   </div>
@@ -334,7 +334,7 @@
                   <div class="element">
                     <div class="element">
                       <h5>Password is required </h5>
-                      <h3 class="arrCard" data-aos="fade-up"><strong>WORK SAMPLES RX Zero</strong></h3>
+                      <h3 class="arrCard" data-aos="fade-up"><strong>RX Zero | Business Shift</strong></h3>
                       <h4>Extensive startup experience with full design process immersion and diverse skill set</h4>
                     </div>
                   </div>
@@ -374,7 +374,7 @@
                   <div class="element">
                     <div class="element">
                       <h5>Password is required </h5>
-                      <h3 class="arrCard" data-aos="fade-up"><strong>WORK SAMPLES 2 product page</strong></h3>
+                      <h3 class="arrCard" data-aos="fade-up"><strong>Product page update</strong></h3>
                       <h4>Extensive startup experience with full design process immersion and diverse skill set</h4>
                     </div>
                   </div>
@@ -406,12 +406,12 @@
           <div class="element">
             <a class="no-hover-effect" href="/glorify/">
               <div class="elementCard GLORIFY float cardBorder shadowBoxLt">
-                <img src="./projectImages/Cover_worksample.png" alt="GLORIFY">
+                <img src="./projectImages/Cover_worksample.png" alt="Booking">
                 <div class="element">
                   <div class="element">
-                    <h5>For daily worship</h5>
-                    <h3 class="arrCard" data-aos="fade-up"><strong>BYP B2B SaaS - Onboarding, booking</strong></h3>
-                    <h4>Integrating a community experience into the existing Glorify Application</h4>
+                    <h5>Booking | Business-Facing</h5>
+                    <h3 class="arrCard" data-aos="fade-up"><strong>B2B SaaS - Onboarding & Subscription</strong></h3>
+                    <h4>Focused on simplifying and refining the onboarding and subscription processes, we aim to facilitate a smooth transition for our B2B clients. This approach is geared towards improving engagement and adoption rates, ultimately driving business growth and customer satisfaction.</h4>
                   </div>
                 </div>
               </div>
@@ -422,12 +422,14 @@
           <div class="element">
             <a class="no-hover-effect" href="/glorify/">
               <div class="elementCard GLORIFY float cardBorder shadowBoxLt">
-                <img src="./projectImages/Cover_worksample.png" alt="GLORIFY">
+                <img src="./projectImages/Cover_worksample.png" alt="Consumer-Facing">
                 <div class="element">
                   <div class="element">
-                    <h5>For daily worship</h5>
-                    <h3 class="arrCard" data-aos="fade-up"><strong>BYP Cusumer flow</strong></h3>
-                    <h4>Integrating a community experience into the existing Glorify Application</h4>
+                    <h5>Service Booking App | Consumer-Facing</h5>
+                    <h3 class="arrCard" data-aos="fade-up"><strong>Enhancing the Consumer Booking Flow</strong></h3>
+                    <h4>Enhancing your booking experience to ensure seamless appointment scheduling, our goal is to
+                      boost conversion rates and minimize booking drop-offs. This streamlined process is designed not
+                      only to increase revenue but also to enhance customer loyalty.</h4>
                   </div>
                 </div>
               </div>
