--- a/about/index.html
+++ b/about/index.html
@@ -214,7 +214,7 @@
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-2">
 
-      <div class="Grid-cell" data-aos="fade-down-right">
+      <div class="Grid-cell" data-aos="flip-up">
         <div class="element">
           <div class="elementInner cardBorder shadowBoxLt">
             <img class="iconS" src="IconSearch.svg" alt="se-arrow">
@@ -235,7 +235,7 @@
           </div>
         </div>
       </div>
-      <div class="Grid-cell" data-aos="fade-down-left">
+      <div class="Grid-cell" data-aos="flip-up">
         <div class="element">
           <div class="elementInner cardBorder shadowBoxLt">
             <img class="iconS" src="IconCategory.svg" alt="se-arrow">
@@ -260,7 +260,7 @@
 
     </div>
     <div class="Grid Grid--gutters Grid--cols-2">
-      <div class="Grid-cell" data-aos="fade-down-right">
+      <div class="Grid-cell" data-aos="flip-up">
         <div class="element">
           <div class="elementInner cardBorder shadowBoxLt">
             <img class="iconS" src="iconBrush.svg" alt="se-arrow">
@@ -285,7 +285,7 @@
           </div>
         </div>
       </div>
-      <div class="Grid-cell" data-aos="fade-down-left">
+      <div class="Grid-cell" data-aos="flip-up">
         <div class="element">
           <div class="elementInner cardBorder shadowBoxLt">
             <img class="iconS" src="IconDocument.svg" alt="se-arrow">
@@ -439,24 +439,28 @@
           <h5>Bachelor of Art </h5>
           <h5> Art & Design &#38; Landscape Design </h5>
         </div>
-        <div class="element ">
+        <div class="element">
           <h4 data-aos="fade-up"> <strong>Google UX Design Professional Certificate </strong> </h4>
           <h6 class="textItalic"> August 2021 - October 2021</h6>
           <h5>Google &#124; Coursera</h5>
-          <h5> UI &#47; UX Design </h5>
+          <h5>UI &#47; UX Design </h5>
         </div>
-        <div class="element ">
+        <div class="element">
           <h4 data-aos="fade-up"> <strong>Codecademy </strong> </h4>
           <h6 class="textItalic"> March - May 2023</h6>
           <h5>Learn User Research: Generative</h5>
           <h5>Learn Design Thinking: Ideation</h5>
           <h5>Learn Interaction Design</h5>
+          <h5>Introduction to UI and UX Design </h5>
 
-          <h5> UX Design &#47; Research</h5>
+          <h5>Learn Responsive Design</h5>
+          <h5>Learn Navigation Design</h5>
+          <h5>Learn JavaScript</h5>
 
           <br>
-          <h5>Learn JavaScript</h5>
-          <h5> Technical Skills </h5>
+          <h6 class="textItalic"> March 2023 - Present</h6>
+
+          <h5>Front-End Engineer </h5>
 
 
         </div>
@@ -549,17 +553,20 @@
           <h5>Data Analysis</h5>
         </div>
         <div class="element">
-          <h4 data-aos="fade-up"> <strong> Technical Skills</strong> </h4>
-          <h5> HTML, CSS, JavaScript, jQuery </h5>
-        </div>
-
-        <div class="element">
           <h4 data-aos="fade-up"> <strong>Design Tools</strong> </h4>
           <h5> Figma, Adobe XD, Sketch </h5>
 
           <h5> Adobe Suite (Illustrator, Photoshop, InDesign) AutoCAD </h5>
         </div>
 
+        <div class="element">
+          <h4 data-aos="fade-up"> <strong> Technical Skills</strong> </h4>
+          <h5> HTML, CSS,</h5>
+          <h5> JavaScript, EJS(Embedded JavaScript templates), jQuery </h5>
+
+        </div>
+
+    
 
         <div class="element">
           <h4 data-aos="fade-up"> <strong>3D Design Tools </strong> </h4>
