--- a/about/index.html
+++ b/about/index.html
@@ -32,10 +32,10 @@
 
   <!-- favicon -->
 
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
+  <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
+  <link rel="manifest" href="../site.webmanifest">
 
 
 
@@ -439,12 +439,7 @@
           <h5>Bachelor of Art </h5>
           <h5> Art & Design &#38; Landscape Design </h5>
         </div>
-        <div class="element">
-          <h4 data-aos="fade-up"> <strong>Google UX Design Professional Certificate </strong> </h4>
-          <h6 class="textItalic"> August 2021 - October 2021</h6>
-          <h5>Google &#124; Coursera</h5>
-          <h5>UI &#47; UX Design </h5>
-        </div>
+
         <div class="element">
           <h4 data-aos="fade-up"> <strong>Codecademy </strong> </h4>
           <h6 class="textItalic"> March - May 2023</h6>
@@ -463,6 +458,13 @@
           <h5>Front-End Engineer </h5>
 
 
+        </div>
+
+        <div class="element">
+          <h4 data-aos="fade-up"> <strong>Google UX Design Professional Certificate </strong> </h4>
+          <h6 class="textItalic"> August 2021 - October 2021</h6>
+          <h5>Google &#124; Coursera</h5>
+          <h5>UI &#47; UX Design </h5>
         </div>
       </div>
 
