--- a/about/index.html
+++ b/about/index.html
@@ -80,7 +80,10 @@
 
     gtag('config', 'G-E8YXDWJST2');
   </script>
-
+  <script>
+    !function (t, e) { var o, n, p, r; e.__SV || (window.posthog = e, e._i = [], e.init = function (i, s, a) { function g(t, e) { var o = e.split("."); 2 == o.length && (t = t[o[0]], e = o[1]), t[e] = function () { t.push([e].concat(Array.prototype.slice.call(arguments, 0))) } } (p = t.createElement("script")).type = "text/javascript", p.async = !0, p.src = s.api_host + "/static/array.js", (r = t.getElementsByTagName("script")[0]).parentNode.insertBefore(p, r); var u = e; for (void 0 !== a ? u = e[a] = [] : a = "posthog", u.people = u.people || [], u.toString = function (t) { var e = "posthog"; return "posthog" !== a && (e += "." + a), t || (e += " (stub)"), e }, u.people.toString = function () { return u.toString(1) + ".people (stub)" }, o = "capture identify alias people.set people.set_once set_config register register_once unregister opt_out_capturing has_opted_out_capturing opt_in_capturing reset isFeatureEnabled onFeatureFlags getFeatureFlag getFeatureFlagPayload reloadFeatureFlags group updateEarlyAccessFeatureEnrollment getEarlyAccessFeatures getActiveMatchingSurveys getSurveys onSessionId".split(" "), n = 0; n < o.length; n++)g(u, o[n]); e._i.push([i, s, a]) }, e.__SV = 1) }(document, window.posthog || []);
+    posthog.init('phc_YFfkBPuCDNKqDW2MiN26UiK6ooMATaOfqxm59vE2QP5', { api_host: 'https://app.posthog.com' })
+  </script>
   <link rel="stylesheet" href="../main.css" />
   <script type="text/javascript" src="../scripts.js"></script>
   <script type="text/javascript" src="../scripts_project.js"></script>
@@ -217,43 +220,21 @@
       <div class="Grid-cell" data-aos="flip-up">
         <div class="element">
           <div class="elementInner cardBorder shadowBoxLt">
-            <img class="iconS" src="IconSearch.svg" alt="se-arrow">
-            <h4 data-aos="fade-up"> <strong> Prioritize Aligning User Needs with Business Goals</strong>
-            </h4>
-            <ul>
-              <li class="listCircle"> Conduct thorough user research to uncover what users truly need and value.</li>
-              <li class="listCircle"> Develop personas and user journeys that reflect the real users and their
-                interaction with the
-                product.</li>
-              <li class="listCircle"> Define clear business metrics that UX improvements should contribute towards, such
-                as increased user
-                retention or higher conversion rates.</li>
-              <li class="listCircle">Foster collaboration between UX designers, stakeholders, and business analysts to
-                ensure alignment on key objectives.
-              </li>
-            </ul>
+            <img class="iconM" src="IconSearch.svg" alt="se-arrow">
+            <h3 data-aos="fade-up"> <strong> Business &#38; Product Insight:</strong>
+            </h3>
+            <p>Deeply understand business objectives and product specifics, while focusing on user goals and pain
+              points.</p>
+
           </div>
         </div>
       </div>
       <div class="Grid-cell" data-aos="flip-up">
         <div class="element">
           <div class="elementInner cardBorder shadowBoxLt">
-            <img class="iconS" src="IconCategory.svg" alt="se-arrow">
-            <h4 data-aos="fade-up"> <strong> Embrace Continuous Testing &#38; Diverse Solutions</strong> </h4>
-            <ul>
-              <li class="listCircle">Implement a structured user testing regimen that validates design hypotheses at
-                various stages of the product development.
-              </li>
-              <li class="listCircle">Encourage a design culture that is not wedded to a single solution but is open to
-                experimentation and diverse perspectives.
-              </li>
-              <li class="listCircle">Analyze test results and user feedback to inform the iteration of designs.
-              </li>
-              <li class="listCircle">Utilize A/B testing to compare different design solutions and understand their
-                impact on user behavior.
-              </li>
-
-            </ul>
+            <img class="iconM" src="IconCategory.svg" alt="se-arrow">
+            <h3 data-aos="fade-up"> <strong> Roadmap Contribution &#38; Team Alignment: </strong> </h3>
+            <p>Actively contribute to the product roadmap and align goals with cross-functional teams.</p>
           </div>
         </div>
       </div>
@@ -263,51 +244,27 @@
       <div class="Grid-cell" data-aos="flip-up">
         <div class="element">
           <div class="elementInner cardBorder shadowBoxLt">
-            <img class="iconS" src="iconBrush.svg" alt="se-arrow">
+            <img class="iconM" src="iconBrush.svg" alt="se-arrow">
 
 
-            <h4 data-aos="fade-up"> <strong> Distill Concepts into Clear &#38; Simplified Design </strong> </h4>
+            <h3 data-aos="fade-up"> <strong> Design Sprint Management:</strong> </h3>
 
-            <ul>
-              <li class="listCircle">Focus on the essential features that support user tasks, avoiding unnecessary
-                complexity.
-              </li>
-              <li class="listCircle">Use clear, consistent, and concise language in UI copy, labels, and instructions.
-              </li>
-              <li class="listCircle">Apply principles of visual hierarchy to guide users naturally through the flow of
-                the product.
-              </li>
-              <li class="listCircle">Simplify user paths to reduce the number of steps required to complete a task.
-              </li>
+            <P>Plan and execute design sprints, setting clear deadlines for phases like discovery, definition, design,
+              and testing.</P>
 
-
-            </ul>
           </div>
         </div>
       </div>
       <div class="Grid-cell" data-aos="flip-up">
         <div class="element">
           <div class="elementInner cardBorder shadowBoxLt">
-            <img class="iconS" src="IconDocument.svg" alt="se-arrow">
+            <img class="iconM" src="IconDocument.svg" alt="se-arrow">
 
 
-            <h4 data-aos="fade-up"> <strong> Commit to Ongoing Learning &#38; Iterative Improvement</strong> </h4>
+            <h3 data-aos="fade-up"> <strong> Solution-Oriented Design:</strong> </h3>
 
-            <ul>
-              <li class="listCircle">Stay updated with the latest UX trends, tools, and methodologies through continuous
-                education and professional development.
-              </li>
-              <li class="listCircle">Regularly review and reassess existing user interfaces for opportunities to enhance
-                usability and accessibility.
-              </li>
-              <li class="listCircle">Incorporate feedback loops with users, stakeholders, and team members to foster a
-                culture of open communication and continuous refinement.
-              </li>
-              <li class="listCircle">Document lessons learned from each project to build a knowledge base for future
-                reference and to avoid repeating past mistakes.
-              </li>
-
-            </ul>
+            <P>Grasp product scope and stakeholder needs, integrating new designs into existing systems with a focus on
+              simplicity and problem-solving.</P>
           </div>
         </div>
       </div>
@@ -482,7 +439,7 @@
         </div>
         <div class="element ">
           <h4 data-aos="fade-up"> <strong> LASO Health </strong> </h4>
-          <h6 class="textItalic"> Sep. 2023 - Dec. 2023</h6>
+          <h6 class="textItalic"> Sep. 2023 - Jan. 2024</h6>
           <h5>San Antonio, Texas. </h5>
           <h5>Product designer</h5>
         </div>
@@ -568,7 +525,7 @@
 
         </div>
 
-    
+
 
         <div class="element">
           <h4 data-aos="fade-up"> <strong>3D Design Tools </strong> </h4>
