--- a/html/architecture/index.html
+++ b/html/architecture/index.html
@@ -87,9 +87,9 @@
     </script>
   
     <!-- Links -->
-    <link rel="stylesheet" href="/ejs/html/main.css">
-    <script type="text/javascript" src="/ejs/html/scripts.js"></script>
-    <script type="text/javascript" src="/ejs/html/scripts_project.js"></script>
+    <link rel="stylesheet" href="/main.css">
+    <script type="text/javascript" src="/scripts.js"></script>
+    <script type="text/javascript" src="/scripts_project.js"></script>
     
   
   </head>
@@ -113,7 +113,7 @@
   <header>
     <nav class="header" id="header">
       <div class="backgroundColorNav">
-        <a href="http://vickywang.me/"><img class="logo pointer" src="/ejs/html/icon/logo.svg" alt="VW"
+        <a href="http://vickywang.me/"><img class="logo pointer" src="/icon/logo.svg" alt="VW"
             title="vickywang.me"></a>
         <div class="navbar">
           <ul class="nav-menu">
@@ -219,7 +219,7 @@
         <div class="Grid-cell">
             <div class="element">
                 <h2 class="tArrow">
-                    Selected Projects <img class="seArrow" src="/ejs/html/icon/arrow-se.svg" alt="icon arrow">
+                    Selected Projects <img class="seArrow" src="/icon/arrow-se.svg" alt="icon arrow">
                 </h2>
             </div>
         </div>
@@ -456,7 +456,7 @@
         <div class="Grid-cell">
             <div class="element">
                 <h2 class="tArrow">
-                    Skills &amp; Experiences <img class="seArrow" src="/ejs/html/icon/arrow-se.svg" alt="icon arrow">
+                    Skills &amp; Experiences <img class="seArrow" src="/icon/arrow-se.svg" alt="icon arrow">
                 </h2>
             </div>
         </div>
@@ -549,7 +549,7 @@
         <div class="Grid-cell">
             <div class="element">
                 <h2 class="tArrow">
-                    Skills &amp; Experiences <img class="seArrow" src="/ejs/html/icon/arrow-se.svg" alt="icon arrow">
+                    Skills &amp; Experiences <img class="seArrow" src="/icon/arrow-se.svg" alt="icon arrow">
                 </h2>
             </div>
         </div>
@@ -626,7 +626,7 @@
 
 
     </div>
-    <a href="/" class=""><img class="widthXS" src="/ejs/html/icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
+    <a href="/" class=""><img class="widthXS" src="/icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
   </div>
 </div>
 <!-- message -->
@@ -638,7 +638,7 @@
   <button id="myBtn" title="Back to top">
     <div id="dad">
       <div id="bro">
-        <img src="/ejs/html/icon/arrow-top.svg" alt="back to top">
+        <img src="/icon/arrow-top.svg" alt="back to top">
       </div>
       <div id="sis">
         <h4>TOP</h4>
@@ -656,32 +656,32 @@
         <div class="Grid Grid--gutters Grid--1of3">
           <div class="Grid-cell">
 
-            <a href="/" class=""><img class="widthXXS" src="/ejs/html/icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
+            <a href="/" class=""><img class="widthXXS" src="/icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
             <div class="blankHXS"></div>
 
             <div class="Grid Grid--gutters">
               <div class="ClipboardBoxIconOnly">
                 <button class="ClipboardIconOnly">
                   <img title="Copy Email Address to Clipboard" class="iconS hoverGrey300 paddingS borderRadiusMax"
-                    title="Copy to Clipboard" src="/ejs/html/icon/mail.svg" alt="LinkedIn">
+                    title="Copy to Clipboard" src="/icon/mail.svg" alt="LinkedIn">
                   <p class="clickIconCopy">vickyw.design@gmail.com</p>
                 </button>
               </div>
               <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
-                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="/ejs/html/icon/in.svg" alt="LinkedIn">
+                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="/icon/in.svg" alt="LinkedIn">
               </a>
 
               <a target="_blank" href="https://github.com/vicky-wyq">
-                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="/ejs/html/icon/git.svg" alt="GitHub"
+                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="/icon/git.svg" alt="GitHub"
                   title="GitHub">
               </a>
 
               <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
-                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="/ejs/html/icon/Codepen.svg" alt="CodePen">
+                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="/icon/Codepen.svg" alt="CodePen">
               </a>
 
               <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="/ejs/html/icon/ins.svg" alt="Instagram"
+                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="/icon/ins.svg" alt="Instagram"
                   title="Instagram">
               </a>
             </div>
